objects/B__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A</label>
        <referenceTo>A__c</referenceTo>
        <relationshipLabel>B</relationshipLabel>
        <relationshipName>B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B_One__c</fullName>
        <label>B One</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C</label>
        <referenceTo>C__c</referenceTo>
        <relationshipLabel>B</relationshipLabel>
        <relationshipName>B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewEmail__c</fullName>
        <label>NewEmail</label>
        <type>Email</type>
    </fields>
    <label>B</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{000}</displayFormat>
        <label>B Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B</pluralLabel>
    <recordTypes>
        <fullName>NewRecordType</fullName>
        <active>true</active>
        <label>NewRecordType</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Test123</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(C__r.Name)</errorConditionFormula>
        <errorMessage>New Test</errorMessage>
    </validationRules>
</CustomObject>